<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Oracle Privileged Account Manager</string>
    <string name="app_name_short">OPAM</string>
    <string name="trademark_title">Oracle Priviliged Account Manager</string>
    <string name="action_settings">Settings</string>
    <string name="title_accounts_section">Accounts</string>
    <string name="title_targets_section">Targets</string>
    <string name="title_section3">Section 3</string>
    <string name="close_drawer_description">Close Menu</string>
    <string name="open_drawer_description">Open Menu</string>
    <string name="drawer_open">Options</string>
    <string name="drawer_close">Close</string>
    <string name="login_activity_title">Login</string>
    <string name="username_edit_text_hint">Username</string>
    <string name="password_edit_text_hint">Password</string>
    <string name="login_activity_button">Login</string>
    <string name="logout_option">Logout</string>
    <string name="login_server_spinner_prompt">Choose a server</string>
    <string name="login_image_button_description">Add Button</string>
    <string name="add_server_alert_title">Input The Server Address And Port</string>
    <string name="add_server_address_hint">Myopamserver.com</string>
    <string name="add_port_hint">Port</string>
    <string name="add_server_text_view">Select A Server</string>
    <string name="checkout_button_text">Check Out</string>
    <string name="checkout_dialog_positive">YES</string>
    <string name="checkin_button_text">Check In</string>
    
    <string-array name="drawer_list_names">
        <item>My Accounts</item>
        <item>Checked Out Accounts</item>
        <item>Server Status</item>
        <item>Settings</item>
        <item>Exit Application</item>
    </string-array>    
</resources>
